src/sass/variables/_root.scss
/* Root */

body {
	--font-editor-theme: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Ubuntu, sans-serif;
	--font-editor: var(--font-editor-override), var(--font-text-override), var(--font-editor-theme);
}

/* FOUNDATIONS */
body {
	/* Borders */
	// --border-width: 1px;

	/* Cursor */
	// --cursor: default;
	// --cursor-link: pointer;

	/* Icons */
	// --icon-size: var(--icon-m);
	// --icon-stroke: var(--icon-m-stroke-width);
	// --icon-xs: 14px;
	// --icon-s: 16px;
	// --icon-m: 18px;
	// --icon-l: 18px;
	// --icon-xl: 32px;
	// --icon-xs-stroke-width: 2px;
	// --icon-s-stroke-width: 2px;
	// --icon-m-stroke-width: 1.75px;
	// --icon-l-stroke-width: 1.75px;
	// --icon-xl-stroke-width: 1.25px;
	// --icon-color: var(--text-muted);
	--icon-color-hover: hsl(var(--color-accent-hsl));
	--icon-color-active: hsl(var(--color-accent-hsl));
	--icon-color-focused: hsl(var(--color-accent-hsl));
	--icon-opacity: 0.8;
	// --icon-opacity-hover: 1;
	// --icon-opacity-active: 1;
	// --clickable-icon-radius: var(--radius-s);

	/* Layers */
	// --layer-cover: 5;
	// --layer-sidedock: 10;
	// --layer-status-bar: 15;
	// --layer-popover: 30;
	// --layer-slides: 45;
	// --layer-modal: 50;
	// --layer-notice: 60;
	// --layer-menu: 65;
	// --layer-tooltip: 70;
	// --layer-dragged-item: 80;

	/* Radiuses */
	// --radius-s: 4px;
	// --radius-m: 8px;
	// --radius-l: 12px;
	// --radius-xl: 16px;

	/* Spacing */
	// --size-2-1: 2px;
	// --size-2-2: 4px;
	// --size-2-3: 6px;
	// --size-4-1: 4px;
	// --size-4-2: 8px;
	// --size-4-3: 12px;
	// --size-4-4: 16px;
	// --size-4-5: 20px;
	// --size-4-6: 24px;
	// --size-4-8: 32px;
	// --size-4-9: 36px;
	// --size-4-10: 40px;
	// --size-4-12: 48px;
	// --size-4-16: 64px;
	// --size-4-18: 72px;

	/* Typography */
	// --font-interface-theme: '??';
	// --font-text-theme: '??';
	// --font-monospace-theme: '??';
	// --font-smallest: 0.8em;
	// --font-smaller: 0.875em;
	// --font-small: 0.933em;
	// --font-ui-smaller: 12px;
	// --font-ui-small: 13px;
	// --font-ui-medium: 15px;
	// --font-ui-large: 20px;
	// --font-weight: var(--font-normal);
	// --font-thin: 100;
	// --font-extralight: 200;
	// --font-light: 300;
	// --font-normal: 400;
	// --font-medium: 500;
	// --font-semibold: 600;
	// --font-bold: 700;
	// --font-extrabold: 800;
	// --font-black: 900;
	// --font-weight: 400;
	// --bold-modifier: 200;
	// --bold-weight: calc(var(--font-weight) + var(--bold-modifier));
	--bold-color: var(--color-cyan);
	// --italic-weight: inherit;
	--italic-color: var(--color-green);
	// --line-height-normal: 1.5;
	// --line-height-tight: 1.3;
	// --p-spacing: 1rem;
	// --p-spacing-empty: 0rem;
	// --heading-spacing: calc(var(--p-spacing) * 2.5);
}

/* WINDOW */
body {
	/* Divider */
	// --divider-color: var(--background-modifier-border);
	--divider-color-hover: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.5);;
	// --divider-width: 1px;
	// --divider-width-hover: 3px;
	// --divider-vertical-height: calc(100% - var(--header-height));

	/* Ribbon */
	// --ribbon-background: var(--background-secondary);
	// --ribbon-background-collapsed: var(--background-primary);
	// --ribbon-width: 44px;
	// --ribbon-padding: var(--size-4-2) var(--size-4-1) var(--size-4-3);

	/* Scrollbar */
	--scrollbar-active-thumb-bg: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.5);
	// --scrollbar-bg: rgba(var(--mono-rgb-100), 0.05);
	// --scrollbar-thumb-bg: rgba(var(--mono-rgb-100), 0.1);

	/* Sidebar */
	// --sidebar-markdown-font-size: calc(var(--font-text-size) * 0.9);
	// --sidebar-tab-text-display: none;

	/* Status bar */
	// --status-bar-background: var(--background-secondary);
	// --status-bar-border-color: var(--divider-color);
	// --status-bar-border-width: 1px 0 0 1px;
	// --status-bar-font-size: var(--font-ui-smaller);
	// --status-bar-text-color: var(--text-muted);
	// --status-bar-position: fixed;
	// --status-bar-radius: var(--radius-m) 0 0 0;
	// --status-bar-scroll-padding: calc(var(--status-bar-font-size) + 18px);

	/* Window frame */
	// --titlebar-background: var(--background-secondary);
	// --titlebar-background-focused: var(--background-secondary-alt);
	// --titlebar-border-width: 0px;
	// --titlebar-border-color: var(--background-modifier-border);
	// --titlebar-text-color: var(--text-muted);
	// --titlebar-text-color-focused: var(--text-normal);
	// --titlebar-text-weight: var(--font-bold);

	/* Workspace */
	// --workspace-background-translucent: rgba(var(--mono-rgb-0), 0.6);
}
/* ... */

